# ZiKeBot

./: README.md  config.yaml  main.py  pyproject.toml
data/: api_key.txt
modules/: const_msg.py  messageReciever.py  randomRepeater.py
modules/help/: __init__.py
modules/ran_re/: __init__.py
modules/sum/: __init__.py  api.py  fileio.py  keywords.txt
