[tool.poetry]
name = "ZiKeBot"
version = "0.1.0"
description = ""
authors = ["LDDMiao <2435206827@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graia-ariadne = {extras = ["standard"], version = "^0.11.2"}
graia-saya = "^0.0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
# 这里以清华源举例，你也可以使用其他源
name = "tuna-tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
